added end of mission

--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,9 @@ SourceArt/**/*.tga
 Binaries/*
 Plugins/*/Binaries/*
 
+# Medieval Dungeons Assets
+Content/MedievalDungeon/*
+
 # Builds
 Build/*
 
@@ -90,5 +93,6 @@ Build/Android/res/*
 !Build/Android/res/*/
 Build/Android/res/*/*
 !Build/Android/res/*/*.png
+
 
 # End of https://www.gitignore.io/api/unrealengine
