--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/NewMap.NewMap
+EditorStartupMap=/Game/Meshes/MedievalEscape.MedievalEscape
 GameDefaultMap=/Game/NewMap.NewMap
 GlobalDefaultGameMode=/Game/Blueprints/MyBuildingEscapeGameModeBase_BP.MyBuildingEscapeGameModeBase_BP_C
 
